telecom-bretagne/javacompiler/SecondPhase/tests/Good/TestIf.java
package tests;

class A {

	
	A(String l[]) {
		if(true){
			int a = 1;
		}else {
			int a =2;
		}
	}
	

}

