telecom-bretagne/javacompiler/SecondPhase/tests/Fail/TestDupMethodParamFail.java
class A {}
class B {
	private int test(int var, String var);
}
